added local configuration option for DRES

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ Thumbs.db # Windows files
 .env.local
 .env.*.local
 
+# Local configuration files
+src/config.local.json
+
 # npm/yarn specific files
 package-lock.json
 yarn.lock
