--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.20.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.5.2",
@@ -21,7 +22,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.1",
-    "@openapitools/openapi-generator-cli": "^2.20.5"
+    "react-toastify": "^11.0.5",
+    "vite": "^5.3.1"
   }
 }
